k8s/chemsynth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chemsynth
  labels:
    name: chemsynth
    app.kubernetes.io/part-of: askcos
