k8s/chemsynth/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: askcos-ingress
  namespace: chemsynth
  labels:
    app: askcos
    app.kubernetes.io/part-of: askcos
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`synth.maus.local`)
      priority: 10
      services:
        - kind: Service
          name: askcos-web
          namespace: chemsynth
          port: 80
          scheme: http
          serverName: synth.maus.local
          weight: 100
  tls:
    secretName: synth-maus-local-tls
